--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "my-expo-app",
-    "slug": "my-expo-app",
+    "name": "buku-saku-prajurit",
+    "slug": "buku-saku-prajurit",
     "version": "1.0.0",
 
     "web": {
