--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
+    "axios": "^1.10.0",
+    "crypto-js": "^4.2.0",
     "expo": "^53.0.17",
     "expo-constants": "^17.1.7",
     "expo-linking": "^7.1.7",
     "expo-router": "^5.1.3",
     "expo-status-bar": "~2.2.3",
+    "jwt-decode": "^4.0.0",
     "nativewind": "latest",
     "react": "19.0.0",
     "react-native": "0.79.5",
