--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,12 @@ npm-debug.*
 *.orig.*
 web-build/
 
-
-
+# .env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 ios
 android
